Fix word wrap in player-options labels

--- a/WebHostLib/static/styles/playerOptions/playerOptions.scss
+++ b/WebHostLib/static/styles/playerOptions/playerOptions.scss
@@ -333,6 +333,7 @@ html{
             min-width: 200px;
             margin-right: 4px;
             cursor: default;
+            word-break: normal;
         }
 
         th, td{
